- Implement author search with DB caching and API fallback - Add work search by author ID with automatic persistence - Normalize author ID format for consistent data storage - Refactor DTOs and improve code structure - Add comprehensive error handling and logging